// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  position: relative;
}

.emotion-11.emotion-11.emotion-11 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-7 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-8 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-8[hidden] {
  display: inherit !important;
  visibility: hidden !important;
}

.emotion-8:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-14 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-12 emotion-1 emotion-14 test bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-7 emotion-8 emotion-1 emotion-10 emotion-11 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`overrides styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-11.emotion-11.emotion-11 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-7 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-8 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-8[hidden] {
  display: inherit !important;
  visibility: hidden !important;
}

.emotion-8:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  position: relative;
}

.emotion-12 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-7 emotion-8 emotion-1 emotion-10 emotion-11 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  position: relative;
}

.emotion-11.emotion-11.emotion-11 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-7 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-8 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-8[hidden] {
  display: inherit !important;
  visibility: hidden !important;
}

.emotion-8:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-7 emotion-8 emotion-1 emotion-10 emotion-11 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  position: relative;
}

.emotion-11.emotion-11.emotion-11 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-7 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-8 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-8[hidden] {
  display: inherit !important;
  visibility: hidden !important;
}

.emotion-8:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-14 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-12 emotion-1 emotion-14 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-7 emotion-8 emotion-1 emotion-10 emotion-11 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`theming styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-11.emotion-11.emotion-11 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-7 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-8 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-8[hidden] {
  display: inherit !important;
  visibility: hidden !important;
}

.emotion-8:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  position: relative;
}

.emotion-12 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-7 emotion-8 emotion-1 emotion-10 emotion-11 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-11.emotion-11.emotion-11 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-10 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-7 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-8 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-8[hidden] {
  display: inherit !important;
  visibility: hidden !important;
}

.emotion-8:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  position: relative;
}

.emotion-12 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-Autosuggest"
  role="combobox"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 bb-AutosuggestInput bb-InputWrapper bb-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
      loop=""
      placeholder="Search for a fruit..."
      role="textbox"
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-7 emotion-8 emotion-1 emotion-10 emotion-11 bb-AutosuggestPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  />
</div>
`;
